<resources>
    <string name="app_name">test task effective mobile</string>
    <string name="rating">rating</string>
    <string name="name">Name</string>
    <string name="price_type">Price type</string>
    <string name="_000">000$</string>
    <string name="address">Address</string>
    <string name="about_hotel">Об отеле</string>
    <string name="facilities">facilities</string>
    <string name="to_room_selection">К выбору номера</string>
    <string name="comfort">Удобства</string>
    <string name="most_important">Самое необходимое</string>
    <string name="include_header">Что включено</string>
    <string name="steigenberger_makadi">Steigenberger Makadi</string>
    <string name="details">Подробнее о номере</string>
    <string name="select_room">Выбрать номер</string>
    <string name="booking">Бронирование</string>
    <string name="departure_from">Вылет из</string>
    <string name="city">City from</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="night_count">Кол-во ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="custoner_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="personal_data_hint">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="tourist_number">tourist number</string>
    <string name="name_ru">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="citizen">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="passport_date">Срок действия паспорта</string>
    <string name="tour">Тур</string>
    <string name="fuel_price">Топливный сбор</string>
    <string name="service_price">Сервисный сбор</string>
    <string name="to_pay">К оплате</string>
    <string name="pay">Оплатить</string>
</resources>