<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".features.hotel_screen.presentation.HotelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/yellow20"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/slider">

                    <TextView
                        android:id="@+id/tvRating"
                        style="@style/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:drawablePadding="2dp"
                        android:text="@string/rating"
                        app:drawableStartCompat="@drawable/ic_star" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvName"
                    style="@style/title_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/slider"
                    app:layout_constraintTop_toBottomOf="@+id/cardRating" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/address_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvPrice"
                    style="@style/price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/_000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

                <TextView
                    android:id="@+id/tvPriceType"
                    style="@style/price_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/price_type"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
                    app:layout_constraintStart_toEndOf="@+id/tvPrice" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:cardCornerRadius="12dp"

            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/tvAboutHotel"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_hotel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_facilities"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvAboutHotel"
                    app:layout_constraintTop_toBottomOf="@+id/tvAboutHotel" />

                <TextView
                    android:id="@+id/tvFacilities"
                    style="@style/facilities_descriptions_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/facilities"
                    app:layout_constraintEnd_toEndOf="@+id/rc_facilities"
                    app:layout_constraintStart_toStartOf="@+id/tvAboutHotel"
                    app:layout_constraintTop_toBottomOf="@+id/rc_facilities" />


                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/rc_facilities"
                    app:layout_constraintStart_toStartOf="@+id/rc_facilities"
                    app:layout_constraintTop_toBottomOf="@+id/tvFacilities">

                    <include layout="@layout/faciliry_buttons_layout" />
                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSelectRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="9dp"
                android:background="@drawable/blue_button_bg"
                android:text="@string/to_room_selection"
                android:textAllCaps="false"
                android:textAppearance="@style/white_text" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>